--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-bootstrap": "^2.10.2",
     "react-card-flip": "^1.2.3",
     "react-dom": "^18.3.1",
+    "react-glass-magnifier": "^1.1.1",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
+    "react-image-magnifiers": "^1.4.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^5.1.7",
